[project]
name = "mdlm"
version = "0.1.0"
description = "MDLM project dependencies"
requires-python = ">=3.9,<3.10"
dependencies = [
    # Core ML libraries
    "torch",
    "torchvision",
    "torchaudio",

    # Jupyter and development
    "jupyter==1.0.0",
    "notebook==7.1.1",
    "ipdb==0.13.13",

    # Data processing
    "datasets==2.18.0",
    "pandas==2.2.1",
    "h5py==3.10.0",
    "fsspec==2024.2.0",

    "numpy",

    # ML utilities
    "einops==0.7.0",
    "transformers==4.38.2",
    "timm==0.9.16",
    "scikit-learn==1.4.0",
    "lightning==2.2.1",

    # Configuration and utilities
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "packaging==23.2",
    "rich==13.7.1",

    # Visualization and monitoring
    "seaborn==0.13.2",
    "wandb==0.13.5",
    "nvitop==1.3.2",

    # Version control and tools
    "git-lfs==1.6",

    # Specialized packages (install separately after torch)
    # "causal-conv1d==1.1.3.post1",
    # "mamba-ssm==1.1.4",
    # "flash-attn==2.5.6",
    # "triton==2.2.0",
]

[tool.uv.extra-build-dependencies]
      causal-conv1d = ["torch"]
      mamba-ssm = ["torch"]
      flash-attn = ["torch"]
